created CustomBlockRegistry, other improvements